# hodel

./: 1d_triplet.ipynb  3d_triplet copy.ipynb  3d_triplet.ipynb  FDM.ipynb  README.md  mnist.ipynb  plate.txt  profile.py  pyproject.toml  rod.txt  triplet.ipynb
examples/: 3d_triplet.ipynb  FDM.ipynb  FDM_shell.ipynb  plate.ipynb
figures/1d_arruda_boyce/: 1d_arruda_boyce.ipynb  1d_strain.csv  1d_train.csv  benchmark.py
figures/1d_arruda_boyce/data/: 1d_strain.csv
figures/3d_ribbon/: 3d_ribbon.ipynb
src/hodel/: __init__.py  config.py  hodel.py  interfaces.py  root_finders.py
src/hodel/dismech/: __init__.py  animate.py  connectivity.py  geometry.py  state.py  triplet.py
src/hodel/dismech/legacy/: __init__.py  mass.py  mesh.py  stiffness.py
src/hodel/dismech/stencils/: __init__.py  stencil.py  triplet.py
